--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,9 @@ detector:
   contribution.timeout.period: 120000   # 2 min
   unstartedtx.period: 300000            # 5 min
 
+workers:
+  askForReplicatePeriod: ${IEXEC_ASK_REPLICATE_PERIOD:5000}
+  requiredWorkerVersion: ${IEXEC_CORE_REQUIRED_WORKER_VERSION:} #leave empty will allow any worker version
 
 wallet:
   encryptedFilePath: ${IEXEC_CORE_WALLET_PATH:./src/main/resources/wallet/encrypted-wallet_scheduler.json}
@@ -34,19 +37,20 @@ chain:
   gasPriceMultiplier: ${IEXEC_GAS_PRICE_MULTIPLIER:1.0} # txs will be send with networkGasPrice*gasPriceMultiplier, 4.0 means super fast
   gasPriceCap: ${IEXEC_GAS_PRICE_CAP:22000000000} #in Wei, will be used for txs if networkGasPrice*gasPriceMultiplier > gasPriceCap
 
-workers:
-  askForReplicatePeriod: ${IEXEC_ASK_REPLICATE_PERIOD:5000}
-  requiredWorkerVersion: ${IEXEC_CORE_REQUIRED_WORKER_VERSION:} #leave empty will allow any worker version
+sms:
+  protocol: ${IEXEC_SMS_PROTOCOL:http}
+  host: ${IEXEC_SMS_HOST:localhost}
+  port: ${IEXEC_SMS_PORT:5000}
+
+scone:
+  cas:
+    host: ${IEXEC_SCONE_CAS_HOST:localhost}
+    port: ${IEXEC_SCONE_CAS_PORT:18765}
 
 resultRepository:
   protocol: ${IEXEC_RESULT_REPOSITORY_PROTOCOL:http}
   host: ${IEXEC_RESULT_REPOSITORY_HOST:localhost}
   port: ${IEXEC_RESULT_REPOSITORY_PORT:18090}
-
-sms:
-  protocol: ${IEXEC_SMS_PROTOCOL:http}
-  host: ${IEXEC_SMS_HOST:localhost}
-  port: ${IEXEC_SMS_PORT:5000}
 
 ipfs:
   host: ${IEXEC_IPFS_HOST:127.0.0.1}
