--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,12 @@ detector:
   resultuploadtimeout.period: 30000     # 30 s
   dealwatcherreplay.period: 60000       # 1 min
   reveal.timeout.period: ${REVEAL_TIMEOUT_PERIOD:120000}       # 2 min
-  reveal.unnotified.period: 30000       # 30s
-  contribution.unnotified.period: 30000 # 30s
+  reveal.unnotified.period: 30000       # 30 s
+  contribution.unnotified.period: 30000 # 30 s
   contribution.timeout.period: 120000   # 2 min
   unstartedtx.period: 300000            # 5 min
+  task.initialized.unnotified.period: 30000  # 30 s
+  task.finalized.unnotified.period: 30000  # 30 s
 
 workers:
   askForReplicatePeriod: ${IEXEC_ASK_REPLICATE_PERIOD:5000}
@@ -27,6 +29,8 @@ wallet:
   encryptedFilePath: ${IEXEC_CORE_WALLET_PATH:./src/main/resources/wallet/encrypted-wallet_scheduler.json}
   password: ${IEXEC_CORE_WALLET_PASSWORD:whatever}
 
+
+####################  dev
 chain:
   id: ${IEXEC_CHAIN_ID:17}
   privateAddress: ${IEXEC_PRIVATE_CHAIN_ADDRESS:http://localhost:8545}
@@ -42,11 +46,6 @@ sms:
   host: ${IEXEC_SMS_HOST:localhost}
   port: ${IEXEC_SMS_PORT:5000}
 
-scone:
-  cas:
-    host: ${IEXEC_SCONE_CAS_HOST:localhost}
-    port: ${IEXEC_SCONE_CAS_PORT:18765}
-
 resultRepository:
   protocol: ${IEXEC_RESULT_REPOSITORY_PROTOCOL:http}
   host: ${IEXEC_RESULT_REPOSITORY_HOST:localhost}
@@ -55,6 +54,11 @@ resultRepository:
 ipfs:
   host: ${IEXEC_IPFS_HOST:127.0.0.1}
   port: ${IEXEC_IPFS_PORT:5001}
+
+scone:
+  cas:
+    host: ${IEXEC_SCONE_CAS_HOST:sgx-server.iex.ec}
+    port: ${IEXEC_SCONE_CAS_PORT:18765}
 
 management:
   endpoints:
