--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     - MONGO_HOST=mongo
     - IEXEC_IPFS_HOST=ipfs
     - IEXEC_SMS_HOST=sms
+    - IEXEC_SCONE_CAS_HOST=iexec-cas
     - IEXEC_CORE_SSL_KEYSTORE=/iexec/ssl-keystore-dev.p12
     - IEXEC_CORE_SSL_PASSWORD=whatever
     volumes:
@@ -71,3 +72,13 @@ services:
       - 5000:5000
     depends_on:
       - chain
+
+  iexec-cas:
+    image: nexus.iex.ec/iexec-cas:${IEXEC_CAS_VERSION}
+    container_name: iexec-cas
+    ports:
+      - 18765:18765
+    networks:
+      - iexec-net
+    devices:
+      - /dev/isgx
