--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.1.6.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -23,7 +23,8 @@ apply plugin: 'maven'
 apply plugin: 'jacoco'
 
 group = 'com.iexec.core'
-sourceCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 
 repositories {
@@ -54,7 +55,9 @@ artifacts {
 }
 
 ext {
-    springCloudVersion = 'Finchley.RELEASE'
+    //https://github.com/spring-cloud/spring-cloud-openfeign/issues/171
+    //Greenwich.SR2 is a patch for Greenwich.RELEASE
+    springCloudVersion = 'Greenwich.SR2'
 }
 
 dependencyManagement {
@@ -97,7 +100,7 @@ dependencies {
     compile "io.jsonwebtoken:jjwt:0.7.0"
 
     // apache commons
-    compile "org.apache.commons:commons-lang3:3.8.1"
+    compile "org.apache.commons:commons-lang3:3.9"
     compile "commons-io:commons-io:2.6"
 
     // expiring map
@@ -106,10 +109,14 @@ dependencies {
     // ipfs 
     compile "com.github.ipfs:java-ipfs-http-client:1.2.3"
     compile "com.github.multiformats:java-multiaddr:1.3.1"
+
+
+    //jaxb required with Java 11
+    compile 'javax.xml.bind:jaxb-api:2.3.0'
 }
 
 jacoco {
-    toolVersion = "0.8.1"
+    toolVersion = "0.8.3"
     reportsDir = file("$buildDir/TestCoverageReport")
 }
 // the test coverage report will be created just before the build
