Changes following PR

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ workers:
   requiredWorkerVersion: ${IEXEC_CORE_REQUIRED_WORKER_VERSION:} #leave empty will allow any worker version
   # the whitelist should format should be as follow (comma separated on one or multiple lines:
   # whitelist: ${IEXEC_WHITELIST:address1,
-  #     address2,}
+  #     address2,
   #     address3}
   whitelist: ${IEXEC_WORKERS_WHITELIST:}
 
