--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-iexecCommonVersion=3.1.0
+iexecCommonVersion=3.2.0-SNAPSHOT
 nexusUser=fake
 nexusPassword=fake
-version=3.1.0
+version=3.2.0-SNAPSHOT
