--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,9 @@ dependencies {
     //compile files("../iexec-common/build/libs/iexec-common-${iexecCommonVersion}.jar")
 
     // spring
-    compile "org.springframework.boot:spring-boot-starter"
+    compile("org.springframework.boot:spring-boot-starter") {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging' //required for Graylog
+    }
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-websocket"
@@ -97,6 +99,8 @@ dependencies {
     // ipfs
     compile "com.github.ipfs:java-ipfs-http-client:1.2.3"
 
+    //graylog
+    compile 'biz.paluch.logging:logstash-gelf:1.5.1'
 
     // lombok
     compileOnly "org.projectlombok:lombok:1.18.2"
