--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,3 +78,7 @@ management:
       exposure:
         include:
           - httptrace
+
+graylog:
+  host: ${IEXEC_CORE_GRAYLOG_HOST:localhost}
+  port: ${IEXEC_CORE_GRAYLOG_PORT:12201}
