--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,9 +46,9 @@ chain:
   gasPriceCap: ${IEXEC_GAS_PRICE_CAP:22000000000} #in Wei, will be used for txs if networkGasPrice*gasPriceMultiplier > gasPriceCap
 
 resultRepository:
-  protocol: ${IEXEC_RESULT_REPOSITORY_PROTOCOL:https}
+  protocol: ${IEXEC_RESULT_REPOSITORY_PROTOCOL:http}
   host: ${IEXEC_RESULT_REPOSITORY_HOST:localhost}
-  port: ${IEXEC_RESULT_REPOSITORY_PORT:18443}
+  port: ${IEXEC_RESULT_REPOSITORY_PORT:18089}
 
 ipfs:
   host: ${IEXEC_IPFS_HOST:127.0.0.1}
