--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,18 +8,20 @@ spring:
       host: ${MONGO_HOST:localhost}
       port: ${MONGO_PORT:27017}
 
-# all in milliseconds
-detector:
-  workerlost.period: 30000              # 30 s
-  resultuploadtimeout.period: 30000     # 30 s
-  dealwatcherreplay.period: 60000       # 1 min
-  reveal.timeout.period: ${REVEAL_TIMEOUT_PERIOD:120000}       # 2 min
-  reveal.unnotified.period: 30000       # 30 s
-  contribution.unnotified.period: 30000 # 30 s
-  contribution.timeout.period: 120000   # 2 min
-  unstartedtx.period: 300000            # 5 min
-  task.initialized.unnotified.period: 30000  # 30 s
-  task.finalized.unnotified.period: 30000  # 30 s
+cron:
+  detector:
+    # all in milliseconds
+    workerlost.period: 30000              # 30 s
+    resultuploadtimeout.period: 30000     # 30 s
+    dealwatcherreplay.period: 60000       # 1 min
+    reveal.timeout.period: ${REVEAL_TIMEOUT_PERIOD:120000}       # 2 min
+    reveal.unnotified.period: 30000       # 30 s
+    contribution.unnotified.period: 30000 # 30 s
+    contribution.timeout.period: 120000   # 2 min
+    unstartedtx.period: 300000            # 5 min
+    task.initialized.unnotified.period: 30000  # 30 s
+    task.finalized.unnotified.period: 30000  # 30 s
+  stdoutAvailabilityDays: ${IEXEC_STDOUT_AVAILABILITY_DAYS:3} # 3 days after final deadline
 
 workers:
   askForReplicatePeriod: ${IEXEC_ASK_REPLICATE_PERIOD:5000}
