--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,5 +79,5 @@ graylog:
   port: ${IEXEC_CORE_GRAYLOG_PORT:12201}
 
 stdout:
-  purge-rate: ${IEXEC_STDOUT_PURGE_RATE:86400000}  # 1d    
-  availability-period: ${IEXEC_STDOUT_AVAILABILITY:259200000} # 3d
+  purge-rate-in-days: ${IEXEC_STDOUT_PURGE_RATE_IN_DAYS:1}
+  availability-period-in-days: ${IEXEC_STDOUT_AVAILABILITY_PERIOD_IN_DAYS:3}
