Generate jacoco xml report

--- a/build.gradle
+++ b/build.gradle
@@ -118,8 +118,13 @@ dependencies {
 
 jacoco {
     toolVersion = "0.8.3"
-    reportsDir = file("$buildDir/TestCoverageReport")
 }
+
+jacocoTestReport {
+    reports.xml.enabled true
+    reports.xml.destination file("${jacoco.reportsDir}/test/cov.xml")
+}
+
 // the test coverage report will be created just before the build
 build.dependsOn jacocoTestReport
 
