--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.0.1-rc1
-iexecCommonVersion=5.0.1-rc1
+version=5.1.0-SNAPSHOT
+iexecCommonVersion=5.2.0-SNAPSHOT
 nexusUser=fake
 nexusPassword=fake
