--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.1.0-rc3
-iexecCommonVersion=5.2.0-rc1
+version=5.2.0-SNAPSHOT
+iexecCommonVersion=5.3.0-SNAPSHOT
 nexusUser=fake
 nexusPassword=fake
