--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.6.RELEASE'
+        springBootVersion = '2.2.13.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -116,6 +116,11 @@ dependencies {
     // package cloud
     springBootJar "io.packagecloud.maven.wagon:maven-packagecloud-wagon:0.0.6"
     libraryJar "io.packagecloud.maven.wagon:maven-packagecloud-wagon:0.0.6"
+
+    // mongock
+    implementation platform('com.github.cloudyrock.mongock:mongock-bom:4.2.7.BETA')
+    implementation 'com.github.cloudyrock.mongock:mongock-spring-v5'
+    implementation 'com.github.cloudyrock.mongock:mongodb-springdata-v2-driver'
 }
 
 jacoco {
