Set mongock version

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ ext {
     //https://github.com/spring-cloud/spring-cloud-openfeign/issues/171
     //Greenwich.SR2 is a patch for Greenwich.RELEASE
     springCloudVersion = 'Greenwich.SR2'
+    mongockVersion = '4.2.7.BETA'
 }
 
 dependencyManagement {
@@ -118,9 +119,8 @@ dependencies {
     libraryJar "io.packagecloud.maven.wagon:maven-packagecloud-wagon:0.0.6"
 
     // mongock
-    compile platform('com.github.cloudyrock.mongock:mongock-bom:4.2.7.BETA')
-    compile 'com.github.cloudyrock.mongock:mongock-spring-v5'
-    compile 'com.github.cloudyrock.mongock:mongodb-springdata-v2-driver'
+    implementation "com.github.cloudyrock.mongock:mongock-spring-v5:${mongockVersion}"
+    implementation "com.github.cloudyrock.mongock:mongodb-springdata-v2-driver:${mongockVersion}"
 }
 
 jacoco {
