--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,9 @@ dependencies {
     // mongock
     implementation "com.github.cloudyrock.mongock:mongock-spring-v5:${mongockVersion}"
     implementation "com.github.cloudyrock.mongock:mongodb-springdata-v2-driver:${mongockVersion}"
+
+    // awaitility
+    testImplementation 'org.awaitility:awaitility:4.0.1'
 }
 
 jacoco {
