Use expiring map

--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,9 @@ dependencies {
     implementation "com.github.cloudyrock.mongock:mongock-spring-v5:${mongockVersion}"
     implementation "com.github.cloudyrock.mongock:mongodb-springdata-v2-driver:${mongockVersion}"
 
+    // expiring map
+    implementation 'net.jodah:expiringmap:0.5.10'
+
     // awaitility
     testImplementation 'org.awaitility:awaitility:4.0.1'
 }
