--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,11 @@ dependencies {
 
     // awaitility
     testImplementation 'org.awaitility:awaitility:4.0.1'
+
+    // mongo
+    testImplementation 'org.testcontainers:testcontainers:1.16.2'
+    testImplementation 'org.testcontainers:junit-jupiter:1.16.2'
+    testImplementation 'org.testcontainers:mongodb:1.16.2'
 }
 
 jar {
