--- a/build.gradle
+++ b/build.gradle
@@ -117,6 +117,11 @@ test {
     useJUnitPlatform()
 }
 
+task itest {
+    group 'Verification'
+    description 'Runs the integration tests.'
+}
+
 jacoco {
     toolVersion = "0.8.7"
 }
