--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.3.0.RELEASE'
+        springBootVersion = '2.4.13'
     }
     repositories {
         mavenCentral()
@@ -39,9 +39,7 @@ repositories {
 }
 
 ext {
-    //https://github.com/spring-cloud/spring-cloud-openfeign/issues/171
-    //Greenwich.SR2 is a patch for Greenwich.RELEASE
-    springCloudVersion = 'Hoxton.SR12'
+    springCloudVersion = '2020.0.5'
     mongockVersion = '4.2.7.BETA'
 }
 
