--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ publishing {
     }
 }
 
-ext.bootJarPath    = relativePath(tasks.bootJar.outputs.files.singleFile)
+ext.jarPathForOCI    = relativePath(tasks.bootJar.outputs.files.singleFile)
 ext.gitShortCommit = 'git rev-parse --short=8 HEAD'.execute().text.trim()
 ext.ociImageName   = 'local/' + ['bash', '-c', 'basename $(git config --get remote.origin.url) .git'].execute().text.trim()
 
@@ -154,6 +154,6 @@ task buildImage(type: Exec) {
     group 'Build'
     description 'Builds an OCI image from a Dockerfile.'
     dependsOn bootJar
-    commandLine("sh", "-c", "docker build --build-arg spring_boot_jar=$bootJarPath -t $ociImageName:$gitShortCommit . &&" +
+    commandLine("sh", "-c", "docker build --build-arg spring_boot_jar=$jarPathForOCI -t $ociImageName:$gitShortCommit . &&" +
             "docker tag $ociImageName:$gitShortCommit $ociImageName:dev")
 }
