--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencyManagement {
 dependencies {
     // iexec
     implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
+    implementation "com.iexec.blockchain:iexec-blockchain-adapter-api-library:$iexecBlockchainAdapterVersion"
     implementation "com.iexec.sms:iexec-sms-library:$iexecSmsVersion"
 
     // spring
