--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 version=7.0.1
 iexecCommonVersion=5.9.1-NEXT-SNAPSHOT
 iexecBlockchainAdapterVersion=7.0.0-NEXT-SNAPSHOT
+iexecResultVersion=7.0.2-NEXT-SNAPSHOT
 iexecSmsVersion=7.0.0-NEXT-SNAPSHOT
 nexusUser=fake
 nexusPassword=fake
