--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven {
-        url "https://nexus.iex.ec/repository/maven-public/"
+        url "https://nexus.intra.iex.ec/repository/maven-public/"
     }
 
     maven { url "https://jitpack.io" }
